ADD: table bootstrap index

--- a/index.html
+++ b/index.html
@@ -25,20 +25,91 @@
         <section>
             <div class="container">
                 <div class="row">
-                    <div class="col-10">I pilastri della terra</div>
-                    <div class="col-10">I promessi sposi</div>
-                    <div class="col-10">Il signore degli anelli</div>
-                    <div class="col-10">Harry Potter e la pietra filosofale</div>
-                    <div class="col-10">Il Codice Da Vinci</div>
-                    <div class="col-10">Shining</div>
-                    <div class="col-10">La Divina Commedia</div>
-                    <div class="col-10">Il Trono di Spade</div>
-                    <div class="col-10">Il mondo di Sofia</div>
-                    <div class="col-10">Le cronache di Narnia: il leone, la strega e l'armadio</div>
-                    <div class="col-10">Il piccolo principe</div>
-                    <div class="col-10">La storia infinita</div>
+                    <table class="table table-striped">
+                        <thead>
+                            <tr>
+                                <th scope="col">Titolo</th>
+                                <th scope="col">Data prestito</th>
+                                <th scope="col">Stato</th>
+                                <th scope="col">Azioni</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th scope="row">I pilastri della terra</th>
+                                <td>-</td>
+                                <td>disponibile</td>
+                                <td>ciao</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">I promessi sposi</th>
+                                <td>-</td>
+                                <td>disponibile</td>
+                                <td>ciao</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Il signore degli anelli</th>
+                                <td>18/10/2023</td>
+                                <td>in prestito</td>
+                                <td>ciao</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Harry Potter e la pietra filosofale</th>
+                                <td>-</td>
+                                <td>disponibile</td>
+                                <td>ciao</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Il Codice Da Vinci</th>
+                                <td>-</td>
+                                <td>non disponibile</td>
+                                <td>ciao</td>
+                            </tr>
+                            ù<tr>
+                                <th scope="row">Shining</th>
+                                <td>-</td>
+                                <td>disponibile</td>
+                                <td>ciao</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">La divina commedia</th>
+                                <td>21/09/2023</td>
+                                <td>in prestito</td>
+                                <td>ciao</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Il trono di spade</th>
+                                <td>-</td>
+                                <td>disponibile</td>
+                                <td>ciao</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Il mondo di Sofia</th>
+                                <td>-</td>
+                                <td>non disponibile</td>
+                                <td>ciao</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Le cronache di Narnia:il leone, la strega e l'armadio</th>
+                                <td>25/07/2023</td>
+                                <td>in prestito</td>
+                                <td>ciao</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Il piccolo principe</th>
+                                <td>-</td>
+                                <td>disponibile</td>
+                                <td>ciao</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">La storia infinita</th>
+                                <td>-</td>
+                                <td>disponibile</td>
+                                <td>ciao</td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
-            </div>
         </section>
 
     </main>
