ADD: correct page index

--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
                                 <th scope="row">I pilastri della terra</th>
                                 <td>-</td>
                                 <td>disponibile</td>
-                                <td>ciao</td>
+                                <div>ciao</div>
+
+
                             </tr>
                             <tr>
                                 <th scope="row">I promessi sposi</th>
