ADD: color badge

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                             <tr>
                                 <th scope="row">I pilastri della terra</th>
                                 <td>-</td>
-                                <td>disponibile</td>
+                                <td class="badge text-bg-success">disponibile</td>
                                 <div>ciao</div>
 
 
@@ -40,67 +40,67 @@
                             <tr>
                                 <th scope="row">I promessi sposi</th>
                                 <td>-</td>
-                                <td>disponibile</td>
+                                <td class="badge text-bg-success">disponibile</td>
                                 <td>ciao</td>
                             </tr>
                             <tr>
                                 <th scope="row">Il signore degli anelli</th>
                                 <td>18/10/2023</td>
-                                <td>in prestito</td>
+                                <td class="badge text-bg-warning">in prestito</td>
                                 <td>ciao</td>
                             </tr>
                             <tr>
                                 <th scope="row">Harry Potter e la pietra filosofale</th>
                                 <td>-</td>
-                                <td>disponibile</td>
+                                <td class="badge text-bg-success">disponibile</td>
                                 <td>ciao</td>
                             </tr>
                             <tr>
                                 <th scope="row">Il Codice Da Vinci</th>
                                 <td>-</td>
-                                <td>non disponibile</td>
+                                <td class="badge text-bg-danger">non disponibile</td>
                                 <td>ciao</td>
                             </tr>
                             ù<tr>
                                 <th scope="row">Shining</th>
                                 <td>-</td>
-                                <td>disponibile</td>
+                                <td class="badge text-bg-success">disponibile</td>
                                 <td>ciao</td>
                             </tr>
                             <tr>
                                 <th scope="row">La divina commedia</th>
                                 <td>21/09/2023</td>
-                                <td>in prestito</td>
+                                <td class="badge text-bg-warning">in prestito</td>
                                 <td>ciao</td>
                             </tr>
                             <tr>
                                 <th scope="row">Il trono di spade</th>
                                 <td>-</td>
+                                <td class="badge text-bg-success">disponibile</td>
                                 <td>disponibile</td>
-                                <td>ciao</td>
                             </tr>
                             <tr>
                                 <th scope="row">Il mondo di Sofia</th>
                                 <td>-</td>
-                                <td>non disponibile</td>
+                                <td class="badge text-bg-danger">non disponibile</td>
                                 <td>ciao</td>
                             </tr>
                             <tr>
                                 <th scope="row">Le cronache di Narnia:il leone, la strega e l'armadio</th>
                                 <td>25/07/2023</td>
-                                <td>in prestito</td>
+                                <td class="badge text-bg-warning">in prestito</td>
                                 <td>ciao</td>
                             </tr>
                             <tr>
                                 <th scope="row">Il piccolo principe</th>
                                 <td>-</td>
-                                <td>disponibile</td>
+                                <td class="badge text-bg-success">disponibile</td>
                                 <td>ciao</td>
                             </tr>
                             <tr>
                                 <th scope="row">La storia infinita</th>
                                 <td>-</td>
-                                <td>disponibile</td>
+                                <td class="badge text-bg-success">disponibile</td>
                                 <td>ciao</td>
                             </tr>
                         </tbody>
