--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <title>Document</title>
 </head>
 
@@ -32,76 +33,76 @@
                             <tr>
                                 <th scope="row">I pilastri della terra</th>
                                 <td>-</td>
-                                <td class="badge text-bg-success">disponibile</td>
-                                <div>ciao</div>
+                                <td><span class="badge text-bg-success">disponibile</span></td>
+                                <div><i class="bi bi-brush"></i></div>
 
 
                             </tr>
                             <tr>
                                 <th scope="row">I promessi sposi</th>
                                 <td>-</td>
-                                <td class="badge text-bg-success">disponibile</td>
-                                <td>ciao</td>
+                                <td><span class="badge text-bg-success">disponibile</td>
+                                <td><i class="bi bi-brush"></i></td>
                             </tr>
                             <tr>
                                 <th scope="row">Il signore degli anelli</th>
                                 <td>18/10/2023</td>
-                                <td class="badge text-bg-warning">in prestito</td>
-                                <td>ciao</td>
+                                <td><span class="badge text-bg-warning">in prestito</td>
+                                <td><i class="bi bi-brush"></i></td>
                             </tr>
                             <tr>
                                 <th scope="row">Harry Potter e la pietra filosofale</th>
                                 <td>-</td>
-                                <td class="badge text-bg-success">disponibile</td>
-                                <td>ciao</td>
+                                <td><span class="badge text-bg-success">disponibile</td>
+                                <td><i class="bi bi-brush"></i></td>
                             </tr>
                             <tr>
                                 <th scope="row">Il Codice Da Vinci</th>
                                 <td>-</td>
-                                <td class="badge text-bg-danger">non disponibile</td>
-                                <td>ciao</td>
+                                <td><span class="badge text-bg-danger">non disponibile</td>
+                                <td><i class="bi bi-brush"></i></td>
                             </tr>
                             ù<tr>
                                 <th scope="row">Shining</th>
                                 <td>-</td>
-                                <td class="badge text-bg-success">disponibile</td>
-                                <td>ciao</td>
+                                <td><span class="badge text-bg-success">disponibile</td>
+                                <td><i class="bi bi-brush"></i></td>
                             </tr>
                             <tr>
                                 <th scope="row">La divina commedia</th>
                                 <td>21/09/2023</td>
-                                <td class="badge text-bg-warning">in prestito</td>
-                                <td>ciao</td>
+                                <td><span class="badge text-bg-warning">in prestito</td>
+                                <td><i class="bi bi-brush"></i></td>
                             </tr>
                             <tr>
                                 <th scope="row">Il trono di spade</th>
                                 <td>-</td>
-                                <td class="badge text-bg-success">disponibile</td>
-                                <td>disponibile</td>
+                                <td><span class="badge text-bg-success">disponibile</td>
+                                <td><i class="bi bi-brush"></i></td>
                             </tr>
                             <tr>
                                 <th scope="row">Il mondo di Sofia</th>
                                 <td>-</td>
-                                <td class="badge text-bg-danger">non disponibile</td>
-                                <td>ciao</td>
+                                <td><span class="badge text-bg-danger">non disponibile</td>
+                                <td><i class="bi bi-brush"></i></td>
                             </tr>
                             <tr>
                                 <th scope="row">Le cronache di Narnia:il leone, la strega e l'armadio</th>
                                 <td>25/07/2023</td>
-                                <td class="badge text-bg-warning">in prestito</td>
-                                <td>ciao</td>
+                                <td><span class="badge text-bg-warning">in prestito</td>
+                                <td><i class="bi bi-brush"></i></td>
                             </tr>
                             <tr>
                                 <th scope="row">Il piccolo principe</th>
                                 <td>-</td>
-                                <td class="badge text-bg-success">disponibile</td>
-                                <td>ciao</td>
+                                <td><span class="badge text-bg-success">disponibile</td>
+                                <td><i class="bi bi-brush"></i></td>
                             </tr>
                             <tr>
                                 <th scope="row">La storia infinita</th>
                                 <td>-</td>
-                                <td class="badge text-bg-success">disponibile</td>
-                                <td>ciao</td>
+                                <td><span class="badge text-bg-success">disponibile</td>
+                                <td><i class="bi bi-brush"></i></td>
                             </tr>
                         </tbody>
                     </table>
