--- a/index.html
+++ b/index.html
@@ -10,11 +10,17 @@
     <title>Document</title>
 </head>
 
-
+.
 
 <body>
     <main>
         <section class="py-5">
+            <div class="container">
+                <h1>Catalogo libri</h1>
+                <button type="button" class="btn btn-primary" id="liveAlertBtn">Aggiungi libro</button>
+            </div>
+        </section>
+        <section class="py-1">
 
         </section>
         <section>
@@ -34,7 +40,7 @@
                                 <th scope="row">I pilastri della terra</th>
                                 <td>-</td>
                                 <td><span class="badge text-bg-success">disponibile</span></td>
-                                <div><i class="bi bi-brush"></i></div>
+                                <div><i class="bi bi-brush"></i><i class="bi bi-calendar2-x"></i></div>
 
 
                             </tr>
@@ -42,67 +48,67 @@
                                 <th scope="row">I promessi sposi</th>
                                 <td>-</td>
                                 <td><span class="badge text-bg-success">disponibile</td>
-                                <td><i class="bi bi-brush"></i></td>
+                                <td><i class="bi bi-brush"></i><i class="bi bi-calendar2-x"></i></td>
                             </tr>
                             <tr>
                                 <th scope="row">Il signore degli anelli</th>
                                 <td>18/10/2023</td>
                                 <td><span class="badge text-bg-warning">in prestito</td>
-                                <td><i class="bi bi-brush"></i></td>
+                                <td><i class="bi bi-brush"></i><i class="bi bi-calendar2-x"></i></td>
                             </tr>
                             <tr>
                                 <th scope="row">Harry Potter e la pietra filosofale</th>
                                 <td>-</td>
                                 <td><span class="badge text-bg-success">disponibile</td>
-                                <td><i class="bi bi-brush"></i></td>
+                                <td><i class="bi bi-brush"></i><i class="bi bi-calendar2-x"></i></td>
                             </tr>
                             <tr>
                                 <th scope="row">Il Codice Da Vinci</th>
                                 <td>-</td>
                                 <td><span class="badge text-bg-danger">non disponibile</td>
-                                <td><i class="bi bi-brush"></i></td>
+                                <td><i class="bi bi-brush"></i><i class="bi bi-calendar2-x"></i></td>
                             </tr>
                             ù<tr>
                                 <th scope="row">Shining</th>
                                 <td>-</td>
                                 <td><span class="badge text-bg-success">disponibile</td>
-                                <td><i class="bi bi-brush"></i></td>
+                                <td><i class="bi bi-brush"></i><i class="bi bi-calendar2-x"></i></td>
                             </tr>
                             <tr>
                                 <th scope="row">La divina commedia</th>
                                 <td>21/09/2023</td>
                                 <td><span class="badge text-bg-warning">in prestito</td>
-                                <td><i class="bi bi-brush"></i></td>
+                                <td><i class="bi bi-brush"></i><i class="bi bi-calendar2-x"></i></td>
                             </tr>
                             <tr>
                                 <th scope="row">Il trono di spade</th>
                                 <td>-</td>
                                 <td><span class="badge text-bg-success">disponibile</td>
-                                <td><i class="bi bi-brush"></i></td>
+                                <td><i class="bi bi-brush"></i><i class="bi bi-calendar2-x"></i></td>
                             </tr>
                             <tr>
                                 <th scope="row">Il mondo di Sofia</th>
                                 <td>-</td>
                                 <td><span class="badge text-bg-danger">non disponibile</td>
-                                <td><i class="bi bi-brush"></i></td>
+                                <td><i class="bi bi-brush"></i><i class="bi bi-calendar2-x"></i></td>
                             </tr>
                             <tr>
                                 <th scope="row">Le cronache di Narnia:il leone, la strega e l'armadio</th>
                                 <td>25/07/2023</td>
                                 <td><span class="badge text-bg-warning">in prestito</td>
-                                <td><i class="bi bi-brush"></i></td>
+                                <td><i class="bi bi-brush"></i><i class="bi bi-calendar2-x"></i></td>
                             </tr>
                             <tr>
                                 <th scope="row">Il piccolo principe</th>
                                 <td>-</td>
                                 <td><span class="badge text-bg-success">disponibile</td>
-                                <td><i class="bi bi-brush"></i></td>
+                                <td><i class="bi bi-brush"></i><i class="bi bi-calendar2-x"></i></td>
                             </tr>
                             <tr>
                                 <th scope="row">La storia infinita</th>
                                 <td>-</td>
                                 <td><span class="badge text-bg-success">disponibile</td>
-                                <td><i class="bi bi-brush"></i></td>
+                                <td><i class="bi bi-brush"></i><i class="bi bi-calendar2-x"></i></td>
                             </tr>
                         </tbody>
                     </table>
