ADD: col sm and md

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
                     <table class="table table-striped">
                         <thead>
                             <tr>
-                                <th scope="col">Titolo</th>
-                                <th scope="col">Data prestito</th>
-                                <th scope="col">Stato</th>
-                                <th scope="col">Azioni</th>
+                                <th scope="col .col-sm-6 .col-md-6 ">Titolo</th>
+                                <th scope="col .col-sm-6 .col-md-6 ">Data prestito</th>
+                                <th scope="col .col-sm-6 .col-md-6 ">Stato</th>
+                                <th scope="col .col-sm-6 .col-md-6 ">Azioni</th>
                             </tr>
                         </thead>
                         <tbody>
