--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div class="container">
-            <div class="row display: flex justify-content: start">
+            <div class="row justify-content-between">
                 <div class="col-auto">
                     <img src="./img/duck.png" alt="">
                 </div>
@@ -53,10 +53,10 @@
                     <table class="table table-striped">
                         <thead>
                             <tr>
-                                <th scope="col .col-sm-6 .col-md-6 ">Titolo</th>
-                                <th scope="col .col-sm-6 .col-md-6 ">Data prestito</th>
-                                <th scope="col .col-sm-6 .col-md-6 ">Stato</th>
-                                <th scope="col .col-sm-6 .col-md-6 ">Azioni</th>
+                                <th scope="col">Titolo</th>
+                                <th scope="col">Data prestito</th>
+                                <th scope="col">Stato</th>
+                                <th scope="col">Azioni</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -138,6 +138,59 @@
                     </table>
                 </div>
         </section>
+
+
+        <!-- form-->
+        <!-- intestazione pagina-->
+        <header class="page-header py-5">
+            <div class="container py-4">
+                <h1>Nuovo Libro</h1>
+            </div>
+            <!-- sezione nome e cognome-->
+            <section>
+                <div class="container">
+                    <form class="row g-3 py-2">
+                        <div class="col-6">
+                            <label for="inputEmail4" class="form-label">Nome Autore</label>
+                            <input type="nome-autore" name="nome-autore" class="form-control"
+                                placeholder="Inserisci il nome dell'autore" id="inputEmail4" required>
+                        </div>
+                        <div class="col-6">
+                            <label for="inputPassword4" class="form-label">Cognome Autore</label>
+                            <input type="cognome-autore" name="cognome-autore" class="form-control"
+                                placeholder="Inserisci il cognome dell'autore" id="inputPassword4" required>
+                        </div>
+                        <div class="col-12">
+                            <label for="inputAddress" class="form-label">Titolo</label>
+                            <input type="titolo" name="titolo" class="form-control" id="inputAddress"
+                                placeholder="Inserisci il titolo del libro" required>
+                        </div>
+                        <div class="col-4">
+                            <label for="inputState" class="form-label">Genere</label>
+                            <select id="inputState" class="form-select" required>
+                                <option selected>Scegli il genere</option>
+                                <option>...</option>
+                            </select>
+                        </div>
+                        <div class="col-4">
+                            <label for="inputCity" class="form-label">Anno di pubblicazione</label>
+                            <input type="text" name="anno-di-pubblicazione" class="form-control" id="inputCity"
+                                placeholder="Inserisci l'anno">
+                        </div>
+                        <div class="col-4">
+                            <label for="inputZip" class="form-label">ISBN#</label>
+                            <input type="text" name="isbn#" class="form-control" id="inputZip"
+                                placeholder="Inserisci il codice isbn#">
+                        </div>
+                </div>
+
+
+
+                </div>
+                </div>
+            </section>
+
+        </header>
 
     </main>
     <!-- alla fine della pagina inseriamo il javascript-->
