--- a/html-css-form/index.html
+++ b/html-css-form/index.html
@@ -53,6 +53,22 @@
                             <input type="text" name="isbn#" class="form-control" id="inputZip"
                                 placeholder="Inserisci il codice isbn#">
                         </div>
+                        <form class="was-validated">
+                            <div class="form-floating">
+                                <textarea class="form-control" name="note"
+                                    placeholder="Inserisci eventuali note sul libro" id="floatingTextarea2"
+                                    style="height: 100px"></textarea>
+                                <label for="floatingTextarea2">Note</label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                <label class="form-check-label" for="flexCheckDefault">
+                                    Disponibile anche in digitale
+                                </label>
+                            </div>
+
+
+                </div>
                 </div>
 
     </main>
