ADD: misure lg ans small col

--- a/html-css-form/index.html
+++ b/html-css-form/index.html
@@ -21,34 +21,34 @@
             <section>
                 <div class="container">
                     <form class="row g-3 py-2">
-                        <div class="col-6">
+                        <div class="col-6 col-sm-4">
                             <label for="inputEmail4" class="form-label">Nome Autore</label>
                             <input type="nome-autore" name="nome-autore" class="form-control"
                                 placeholder="Inserisci il nome dell'autore" id="inputEmail4" required>
                         </div>
-                        <div class="col-6">
+                        <div class="col-6 col-sm-4">
                             <label for="inputPassword4" class="form-label">Cognome Autore</label>
                             <input type="text" name="cognome-autore" class="form-control"
                                 placeholder="Inserisci il cognome dell'autore" id="inputPassword4" required>
                         </div>
-                        <div class="col-12">
+                        <div class="col-lg-12 col-sm-6">
                             <label for="inputAddress" class="form-label">Titolo</label>
                             <input type="text" name="titolo" class="form-control" id="inputAddress"
                                 placeholder="Inserisci il titolo del libro" required>
                         </div>
-                        <div class="col-4">
+                        <div class="col-lg-4 col-sm-6">
                             <label for="inputState" class="form-label">Genere</label>
                             <select id="inputState" class="form-select" required>
                                 <option selected>Scegli il genere</option>
                                 <option>...</option>
                             </select>
                         </div>
-                        <div class="col-4">
+                        <div class="col-lg-4 col-sm-6">
                             <label for="inputCity" class="form-label">Anno di pubblicazione</label>
                             <input type="text" name="anno-di-pubblicazione" class="form-control" id="inputCity"
                                 placeholder="Inserisci l'anno">
                         </div>
-                        <div class="col-4">
+                        <div class="col-lg-4 col-sm-6">
                             <label for="inputZip" class="form-label">ISBN#</label>
                             <input type="text" name="isbn#" class="form-control" id="inputZip"
                                 placeholder="Inserisci il codice isbn#">
@@ -65,6 +65,9 @@
                                 <label class="form-check-label" for="flexCheckDefault">
                                     Disponibile anche in digitale
                                 </label>
+                            </div>
+                            <div>
+                                <button class="btn btn-primary" type="submit">Aggiungi libro</button>
                             </div>
 
 
