ADD: margin bottom row

--- a/html-css-form/index.html
+++ b/html-css-form/index.html
@@ -48,11 +48,13 @@
                             <input type="text" name="anno-di-pubblicazione" class="form-control" id="inputCity"
                                 placeholder="Inserisci l'anno">
                         </div>
-                        <div class="col-lg-4 col-sm-6">
+                        <div class="col-lg-4 col-sm-6 mb-5">
                             <label for="inputZip" class="form-label">ISBN#</label>
                             <input type="text" name="isbn#" class="form-control" id="inputZip"
                                 placeholder="Inserisci il codice isbn#">
                         </div>
+                        <!-- riga-->
+                        <hr class="margin mb-5">
                         <form class="was-validated">
                             <div class="form-floating">
                                 <textarea class="form-control" name="note"
