ADD: text white and corrections

--- a/index.html
+++ b/index.html
@@ -20,20 +20,21 @@
                     <img src="./img/duck.png" alt="" width="60" height="50">
                 </div>
                 <div class="col-auto">
-                    <nav class="navbar navbar-expand-lg text-white">
+                    <nav class="navbar navbar-dark navbar-expand-lg">
                         <div class="container-fluid">
                             <a class="navbar-brand" href="./">Catalogo libri</a>
                             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
                                 aria-expanded="false" aria-label="Toggle navigation">
                                 <span class="navbar-toggler-icon"></span>
-                                <a href="./html-css-form/contact.html">Nuovo libro</a>
+
                             </button>
                             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                                 <div class="navbar-nav">
                                     <a class="nav-link active" aria-current="page" href="#">Anagrafica utenti</a>
                                     <a class="nav-link" href="#">Storico prestiti</a>
                                     <a class="nav-link" href="#">Help</a>
+                                    <a class="nav-link" href="./contact.html">Nuovo libro</a>
                                 </div>
                             </div>
                         </div>
