--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
                                     data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
                                     aria-expanded="false" aria-label="Toggle navigation">
                                     <span class="navbar-toggler-icon"></span>
-                                    <a href="./html-css-form/contact.html">Nuovo libro</a>
+                                    <a href="./contact.html">Nuovo libro</a>
                                 </button>
                                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                                     <div class="navbar-nav">
@@ -45,12 +45,12 @@
                     <section>
                         <div class="container">
                             <form class="row g-3 py-2">
-                                <div class="col-6 col-sm-4">
-                                    <label for="inputEmail4" class="form-label">Nome Autore</label>
-                                    <input type="nome-autore" name="nome-autore" class="form-control"
-                                        placeholder="Inserisci il nome dell'autore" id="inputEmail4" required>
+                                <div class="col-6">
+                                    <label for="inputEmail4" class="nome-autore">Nome Autore</label>
+                                    <input type="text" name="nome-autore" class="form-control"
+                                        placeholder="Inserisci il nome dell'autore" id="nome-autore" required>
                                 </div>
-                                <div class="col-6 col-sm-4">
+                                <div class="col-6">
                                     <label for="inputPassword4" class="form-label">Cognome Autore</label>
                                     <input type="text" name="cognome-autore" class="form-control"
                                         placeholder="Inserisci il cognome dell'autore" id="inputPassword4" required>
@@ -81,22 +81,22 @@
                                 <hr class="margin mb-5">
                                 <!-- commento e check-->
                                 <label for="note">Note</label>
-                                <form class="was-validated">
-                                    <div class="form-floating">
-                                        <textarea class="form-control" name="note"
-                                            placeholder="Inserisci eventuali note sul libro" id="floatingTextarea2"
-                                            style="height: 100px"></textarea>
-                                        <label for="floatingTextarea2">Note</label>
-                                    </div>
-                                    <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                                        <label class="form-check-label" for="flexCheckDefault">
-                                            Disponibile anche in digitale
-                                        </label>
-                                    </div>
-                                    <div>
-                                        <button class="btn btn-primary" type="submit">Aggiungi libro</button>
-                                    </div>
+
+                                <div class="form-floating">
+                                    <textarea class="form-control" name="note"
+                                        placeholder="Inserisci eventuali note sul libro" id="floatingTextarea2"
+                                        style="height: 100px"></textarea>
+                                    <label for="floatingTextarea2">Note</label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                    <label class="form-check-label" for="flexCheckDefault">
+                                        Disponibile anche in digitale
+                                    </label>
+                                </div>
+                                <div>
+                                    <button class="btn btn-primary" type="submit">Aggiungi libro</button>
+                                </div>
 
 
                         </div>
